[package]
name = "forcerelay-tests-tx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ckb-sdk = "2.4.0"
ckb-hash = "0.106.0"
ckb-types = "0.106.0"
ckb-jsonrpc-types = "0.106.0"

hex = "0.4"

secp256k1 = "0.24"

serde = "1.0"
serde_json = "1.0"

eth_light_client_in_ckb-verification = { version = "0.1.0-alpha.0", git = "https://github.com/yangby-cryptape/eth-light-client-in-ckb", rev = "707d7f6" }
